remove unncessary config lines

--- a/templates/default/berkshelf-api.conf.erb
+++ b/templates/default/berkshelf-api.conf.erb
@@ -18,10 +18,7 @@
            \"type\": \"github\",
            \"options\": {
              \"organization\": \"#{@keys['github']['organization']}\",
-             \"access_token\": \"#{@keys['github']['token']}\",
-             \"api_endpoint\": \"https://github.com/api/v3\",
-             \"web_endpoint\": \"https://github.com\",
-             \"ssl_verify\": true
+             \"access_token\": \"#{@keys['github']['token']}\"
            }
         }" %>
     <% end %>
